--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,17 @@
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
         <activity
-            android:name=".VendorLoginActivity"
+            android:name=".UserLogIn"
+            android:exported="false"
+            android:label="@string/title_activity_log_in"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".VendorSignUp"
             android:exported="false"
             android:label="@string/title_activity_vendor_login"
             android:theme="@style/Theme.AppCompat" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".UserSignUp"
             android:exported="false"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.AppCompat" />
@@ -34,6 +39,11 @@
             android:name=".VendorPage"
             android:exported="false"
             android:label="Vendor Form" />
+        <activity
+            android:name=".VendorLogIn"
+            android:exported="false"
+            android:label="@string/title_activity_log_in"
+            android:theme="@style/Theme.AppCompat" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
