Set up hook-ups for future "VendorProfilePage" completion. Added ability for vendors to update business information (except hours).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
             android:exported="false"
             android:label="@string/title_activity_vendor_login"
             android:theme="@style/Theme.AppCompat" />
+        <!--This is commented out until VendorProfilePage is implemented. Simply remove
+        the comment to make it all work.
+        <activity
+            android:name=".VendorProfilePage"
+            android:exported="false"
+            android:label="VendorProfilePage"
+            android:theme="@style/Theme.AppCompat" />
+            -->
         <activity
             android:name=".UserSignUp"
             android:exported="false"
